# mingl-backend

./: .env  Cargo.toml  build.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/schema/mutation/: mod.rs
lib/src/schema/query/: mod.rs
src/: main.rs
