[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7" }
async-graphql-poem = { version = "7" }
tokio = { version = "1", features = ["full"] }
poem = { version = "3" }
itertools = { version = "0.14" }
chrono = { version = "0.4" }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
] }
uuid = { version = "*" }
# TODO: sqlx sadly depends on 0.8 and tungstenite depednds on 0.9 I think
rand = { version = "0.9" }
